--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -17,12 +17,13 @@
  	<h2 id="Instructions">Instructions</h2>
  	<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
  	<p>Concentration helps exercise the brain, making it more sharp and alert. If you play memory games at least thirty minutes every day, your concentration and focusing ability will improve. You'll have fun while improving your memory.</p>
- 	<div>
+ 	<div id="game-board" class="board clearfix"></div>
+ <!-- 	<div>
 <img id="Game" src="images/back.png" alt="Queen of Diamonds">
 <img src="images/back.png" alt="Queen of Hearts">
 <img src="images/back.png" alt="King of Diamonds">
 <img src="images/back.png" alt="King of Hearts">
-</div>
+</div> -->
 </main>
   <footer class="clearfix">
 	<p class="copyright">Copyright 2017</p>
